ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs-web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
spec:
  tls:
    - hosts:
        - "docs.local"
      secretName: wikijs-web-cert
  rules:
    - host: "docs.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: wikijs-svc
                port:
                  number: 80
